# web

./: .cpanel.yml  .pre-commit-config.yaml  .pre-commit-hooks.yml  README.md  pyproject.toml
.github/workflows/: django.yml  page-ci.yml
django/: .dockerignor  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  makefile  passenger_wsgi.py  pyproject.toml  requirements.txt
django/src/: passenger_wsgi.py
django/src/apps/auths/: forms.py  urls.py  views.py
django/src/apps/auths/templates/: signup.html
django/src/apps/auths/templates/auths/: _base.html  base.html  login.html  registration.html
django/src/apps/bio/: apps.py  urls.py  views.py
django/src/apps/bio/templates/: _base.html  header.html  index.html  navbar.html
django/src/apps/bio/templates/bio/: _base.html  base.html  header.html  index.html
django/src/apps/core/: admin.py  libs.py  models.py  services.py  utils.py
django/src/apps/core/migrations/: 0001_initial.py  0002_source.py  0003_language.py  0003_store.py  0004_language.py  0004_state.py
django/src/apps/dashboard/: apps.py  urls.py  views.py
django/src/apps/data/: apps.py  models.py  views.py
django/src/apps/data/migrations/: 0001_initial.py
django/src/apps/dictionary/: apps.py  enums.py  libs.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
django/src/apps/dictionary/migrations/: 0001_initial.py  0002_word.py  0003_pronunciation.py  0004_attribution.py  0004_definition.py  0005_definition.py  0005_example.py  0006_example.py  0006_relationtype.py  0007_relation.py  0007_relationtype.py  0008_relation.py  0008_translation.py  0009_translation.py
django/src/apps/home/: urls.py
django/src/apps/media/: models.py
django/src/apps/media/migrations/: 0001_initial.py  0002_image.py
django/src/apps/portfolio/: urls.py
django/src/apps/quran/: apps.py  enums.py  models.py
django/src/apps/quran/migrations/: 0001_initial.py
django/src/apps/todo/: enums.py  models.py  services.py  urls.py  views.py
django/src/apps/todo/migrations/: 0001_initial.py
django/src/apps/todo/templates/todo/: base.html  index.html  todos.html
django/src/apps/users/: admin.py  models.py
django/src/apps/users/migrations/: 0001_initial.py  0002_state.py  0003_locality.py  0004_street.py  0005_coordinate.py  0006_address.py  0007_profile.py
django/src/config/: __init__.py  settings.py  urls.py  wsgi.py
django/src/static/bio/: style.css
django/src/static/todo/: style.css
django/src/templates/: _base.html  base.html  home.html
django/src/theme/static_src/: package-lock.json
django/src/theme/templates/: base.html
page/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  makefile  passenger_wsgi.py  prometheus.yml  pyproject.toml  requirements.txt  ruff.toml
page/src/apps/account/: api.py  constants.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
page/src/apps/account/migrations/: 0001_initial.py  0002_profile.py  0003_registration.py  0003_verification.py
page/src/apps/account/repos/: profile_repo.py  user_repo.py  verification_repo.py
page/src/apps/account/services/: auth_service.py  profile_service.py
page/src/apps/authn/: constants.py  mixins.py  models.py  serializers.py  urls.py  views.py
page/src/apps/authn/migrations/: 0001_initial.py
page/src/apps/authn/repos/: verification_repo.py
page/src/apps/authn/services/: auth_service.py
page/src/apps/core/: admin.py  clients.py  mixins.py  models.py  serializers.py  tests.py  time_utils.py  types.py  urls.py  views.py
page/src/apps/core/builders/: response.py
page/src/apps/core/libs/: __init__.py  data.py  error.py  errors.py  formats.py  resp.py  success.py  times.py  types.py
page/src/apps/core/migrations/: 0001_initial.py  0002_source.py  0003_language.py  0003_state.py  0004_code.py  0004_language.py  0005_language.py  0005_location.py  0006_coordinate.py  0006_language.py  0006_location.py  0007_location.py  0008_address.py  0009_url.py  0010_platform.py  0011_alter_user_managers.py
page/src/apps/core/repos/: base_repo.py  user_repo.py
page/src/apps/core/services/: base_service.py  user_service.py
page/src/apps/core/utils/: dict_utils.py  time_utils.py
page/src/apps/home/: clients.py  constants.py  mixins.py  urls.py  views.py
page/src/config/: settings.py  urls.py  wsgi.py
page/src/templates/core/: base.html
page/src/templates/home/: base.html  header.html  home-section-about.html  home-section-home.html  index.html
portfolio/: .env.example  .gitignore  docker-compose.yml  dockerfile  makefile  pyproject.toml
portfolio/src/: db.sqlite3
portfolio/src/config/: settings.py
