[tool.poetry]
name = "django-project"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
## reserved packages
requests = "2.29.0" # for namecheap host issue
## end reserved packages
## core
loguru = "0.7.0"
coreapi = "2.3.3" # must be installed for TokenAuthentication
## django
django = "4.1.9" # 4.2 drops support for mariadb 10.3
django-environ = "0.10.0"
django-cors-headers = "4.0.0"
django-browser-reload = "1.8.0"
dj-static = "0.0.6"
django-soft-delete = "0.9.21"
django-taggit = "4.0.0"
## rest
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
#dj-rest-auth = "4.0.1"
## ui
django-bootstrap5 = "23.1"
django-bootstrap-icons = "0.8.3"
# django-tailwind = "3.5.0"
## others
pymysql = "1.0.3"
# pillow = "9.5.0"
wordnik-py3 = "2.1.2"
libretranslatepy = "2.1.3"
# django-imagekit = "4.1.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "7.1.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.2"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
