[project]
name = "page"
version = "0.0.1"
description = "Webpage for romancse.com"
authors = [
    { name = "Roman", email = "iamromandev@gmail.com" }
]
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    ## reserved packages
    # for namecheap host issue
   # "requests (==2.29.0)",
    ## end reserved packages
    ## core
    # must be installed for TokenAuthentication
    #"coreapi (>=2.3.3)",
    "loguru (==0.7.3)",
    ## django
    # 4.2 drops support for mariadb 10.3
    "django (==5.2)",
    "django-environ (==0.12.0)",
    "django-cors-headers (==4.7.0)",
    "django-browser-reload (==1.18.0)",
    "dj-static (==0.0.6)",
    "django-soft-delete (==1.0.18)",
    "django-taggit (==6.1.0)",
    ## rest
    "djangorestframework (==3.16.0)",
    "djangorestframework-simplejwt (==5.5.0)",
    # "drf-yasg (==1.21.7)",
    # "dj-rest-auth (==4.0.1)",
    ## ui
    "django-bootstrap5 (==25.1)",
    "django-bootstrap-icons (==0.9.0)",
    # "django-tailwind (==3.5.0)",
    "django-crispy-forms (==2.4)",
    "crispy-bootstrap5 (==2025.4)",
    ## db
    "pymysql (==1.1.1)",
    ## misc
    # "pillow (==9.5.0)",
    #"wordnik-py3 (==2.1.2)",
    #"libretranslatepy (==2.1.3)",
    # "django-imagekit (==4.1.0)",
    "django-phonenumber-field[phonenumbers] (==8.0.0)",
    "django-avatar (==8.0.1)",
    "pytz (==2025.2)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0"
ruff = ">=0.11.2"
mypy = ">=1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
