[tool.poetry]
name = "portfolio"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
loguru = "^0.6.0"
django = "^4.1.7"
django-environ = "^0.10.0"
pymysql = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
